--- a/src/App.scss
+++ b/src/App.scss
@@ -600,7 +600,7 @@ $colorBGmenu : #607d8b;
     }
     .modal-box-body{
         width: 50%;
-        height:50%;
+        height:auto;
         margin: auto;
         background-color: #eeeeee;
         border-radius: 10px;
@@ -629,19 +629,13 @@ $colorBGmenu : #607d8b;
             .btn-modalbox-close i{
                 color: #fefefe;
             }
-@media only screen and (max-width:720px) {
-    .modal-box-body{
-        width: 100%;
-        height: auto;
-    }
-}
 //ContentModalStudentadd
 .body-content-modalStudent{
     border: 2px solid red;
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 70% 30%; 
 }
 .form-modalContent{
     border: 3px solid green;
@@ -653,20 +647,98 @@ $colorBGmenu : #607d8b;
     .input-modalBox{
         display: grid;
         grid-template-columns: 30% 70%;
+        margin: 5px 0px;
     }
     .input-modalBox span{
-        padding-left: 15px;
+        padding-left: 20%;
     }
+        .input-modalBox input{
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            width: 90%;
+            padding-left: 8px;
+        }
+    .inputButtonUpdown,.inputButtonDrop{
+        position: relative;
+        width: 35%;
+    }
+    .inputButtonDrop{
+        position: static;
+        display: flex;
+    }
+    .Modalinput-year{
+        width: 100%;
+        font-size: 16px;
+        font-weight: bold;
+    }
+    .btn-up-input{
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 50%;
+        width: 25px;
+        font-size: 10px;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        border: 1px solid #ddd;
+    }
+    .btn-down-input{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        height: 50%;
+        width: 25px;
+        font-size: 10px;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        border: 1px solid #ddd;
+    }
+    .btn-dropdown-input{
+        width: 25px;
+        font-size: 10px;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        border: 1px solid #ddd;
+        height: 100%;
+        position: static;
+    }
+    .box-dropDown{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 0;
+        display: none;
+    }
+        .box-dropDown button{
+            width: 100%;
+            height: 25px;
+            border: none;
+            border-right: 1px solid #ddd;
+            border-left: 1px solid #ddd;
+            background-color: #fefefe;
+            text-align: start;
+            font-size: 16px;
+        }
+        .box-dropDown button:hover{
+            background-color: #b0bec5;
+            font-weight: bold;
+        }
+        
 .form-picture{
     border: 2px solid yellow;
     .preview-picture{
         border: 1px solid rebeccapurple;
     }
 }
-    .canvas-perview{
+    .img-perview{
         border: 3px solid black;
         width: 100%;
         height: 180px;
+        object-fit: contain;
     }
     .input-picture{
         border: 5px solid orange;
@@ -683,6 +755,20 @@ $colorBGmenu : #607d8b;
             display: block;
             margin: 10px auto;
         }
+@media only screen and (max-width:1024px) {
+    .inputButtonUpdown,.inputButtonDrop{
+        width: 60%;
+    }
+}
+@media only screen and (max-width:720px) {
+    .modal-box-body{
+        width: 100%;
+        height: auto;
+    }
+    .inputButtonUpdown,.inputButtonDrop{
+        width: 60%;
+    }
+}
 }
 
 html,body{
