--- a/src/css/App.css
+++ b/src/css/App.css
@@ -580,7 +580,7 @@ html .modal-box, body .modal-box {
 }
 html .modal-box-body, body .modal-box-body {
   width: 50%;
-  height: 50%;
+  height: auto;
   margin: auto;
   background-color: #eeeeee;
   border-radius: 10px;
@@ -609,12 +609,6 @@ html .btn-modalbox-close, body .btn-modalbox-close {
 html .btn-modalbox-close i, body .btn-modalbox-close i {
   color: #fefefe;
 }
-@media only screen and (max-width: 720px) {
-  html .modal-box-body, body .modal-box-body {
-    width: 100%;
-    height: auto;
-  }
-}
 html .body-content-modalStudent, body .body-content-modalStudent {
   border: 2px solid red;
   height: 100%;
@@ -632,9 +626,85 @@ html .form-modalContent, body .form-modalContent {
 html .input-modalBox, body .input-modalBox {
   display: grid;
   grid-template-columns: 30% 70%;
+  margin: 5px 0px;
 }
 html .input-modalBox span, body .input-modalBox span {
-  padding-left: 15px;
+  padding-left: 20%;
+}
+html .input-modalBox input, body .input-modalBox input {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  width: 90%;
+  padding-left: 8px;
+}
+html .inputButtonUpdown, html .inputButtonDrop, body .inputButtonUpdown, body .inputButtonDrop {
+  position: relative;
+  width: 35%;
+}
+html .inputButtonDrop, body .inputButtonDrop {
+  position: static;
+  display: flex;
+}
+html .Modalinput-year, body .Modalinput-year {
+  width: 100%;
+  font-size: 16px;
+  font-weight: bold;
+}
+html .btn-up-input, body .btn-up-input {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 50%;
+  width: 25px;
+  font-size: 10px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  border: 1px solid #ddd;
+}
+html .btn-down-input, body .btn-down-input {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 50%;
+  width: 25px;
+  font-size: 10px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  border: 1px solid #ddd;
+}
+html .btn-dropdown-input, body .btn-dropdown-input {
+  width: 25px;
+  font-size: 10px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  border: 1px solid #ddd;
+  height: 100%;
+  position: static;
+}
+html .box-dropDown, body .box-dropDown {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  display: none;
+}
+html .box-dropDown button, body .box-dropDown button {
+  width: 100%;
+  height: 25px;
+  border: none;
+  border-right: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+  background-color: #fefefe;
+  text-align: start;
+  font-size: 16px;
+}
+html .box-dropDown button:hover, body .box-dropDown button:hover {
+  background-color: #b0bec5;
+  font-weight: bold;
 }
 html .form-picture, body .form-picture {
   border: 2px solid yellow;
@@ -642,10 +712,11 @@ html .form-picture, body .form-picture {
 html .form-picture .preview-picture, body .form-picture .preview-picture {
   border: 1px solid rebeccapurple;
 }
-html .canvas-perview, body .canvas-perview {
+html .img-perview, body .img-perview {
   border: 3px solid black;
   width: 100%;
   height: 180px;
+  object-fit: contain;
 }
 html .input-picture, body .input-picture {
   border: 5px solid orange;
@@ -661,6 +732,20 @@ html .input-picture-file, body .input-picture-file {
 html .btn-add-filePicture, body .btn-add-filePicture {
   display: block;
   margin: 10px auto;
+}
+@media only screen and (max-width: 1024px) {
+  html .inputButtonUpdown, html .inputButtonDrop, body .inputButtonUpdown, body .inputButtonDrop {
+    width: 60%;
+  }
+}
+@media only screen and (max-width: 720px) {
+  html .modal-box-body, body .modal-box-body {
+    width: 100%;
+    height: auto;
+  }
+  html .inputButtonUpdown, html .inputButtonDrop, body .inputButtonUpdown, body .inputButtonDrop {
+    width: 60%;
+  }
 }
 
 /*# sourceMappingURL=App.css.map */
