--- a/src/css/App.css
+++ b/src/css/App.css
@@ -134,7 +134,6 @@ html .btn-header-menuBar, body .btn-header-menuBar {
   background-color: #607d8b;
   display: none;
   width: 30%;
-  border: 2px solid red;
 }
 html .bi-x, body .bi-x {
   display: none;
@@ -160,7 +159,7 @@ html .btn-menu-navigatepage, body .btn-menu-navigatepage {
   height: 5%;
   border-bottom: 3px solid #e0e0e0;
 }
-html .btn-menu-navigatepage button, body .btn-menu-navigatepage button {
+html .navigatMenuBTN, body .navigatMenuBTN {
   width: 100%;
   height: 100%;
   border: none;
@@ -176,12 +175,32 @@ html .btn-menu-navigatepage button:hover, body .btn-menu-navigatepage button:hov
   background-color: #37474f;
   color: #b0bec5;
 }
+html .holdBTNmenuNavigatepage, body .holdBTNmenuNavigatepage {
+  border: 5px solid #546e7a;
+  background-color: #37474f;
+  color: #b0bec5;
+}
 html .show-content-box, body .show-content-box {
   height: 95vh;
   width: 90%;
   position: absolute;
   right: 0;
   bottom: 0;
+}
+html .body-mainDefault, body .body-mainDefault {
+  height: 100%;
+  width: 100%;
+}
+html .header-mainDefault, body .header-mainDefault {
+  height: 10%;
+  width: 100%;
+  background-color: #f5f5f5;
+  color: #424242;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding: 0 20px;
+  font-size: 10px;
 }
 @media only screen and (max-width: 1024px) {
   html .menu-navigatepage, body .menu-navigatepage {
@@ -201,7 +220,6 @@ html .show-content-box, body .show-content-box {
   html .show-content-box, body .show-content-box {
     width: 100%;
     height: 94%;
-    border: 1px solid red;
   }
   html .header-navigatepage, body .header-navigatepage {
     height: 5%;
@@ -221,11 +239,11 @@ html .body-content-ctStudent, body .body-content-ctStudent {
   position: relative;
 }
 html .header-show-contentStudent, body .header-show-contentStudent {
-  height: 30px;
+  height: 35px;
   width: 95%;
   margin: auto;
   position: relative;
-  top: 10px;
+  top: 1%;
   left: 0;
   align-items: center;
   background-color: #e0e0e0;
@@ -241,6 +259,7 @@ html .text-header, body .text-header {
   background-color: #e0e0e0;
   padding: 0 10px;
   font-weight: bold;
+  font-size: 13px;
 }
 html .menu-search, body .menu-search {
   width: 80%;
@@ -363,7 +382,6 @@ html .table-show-infoStudent > tbody > tr:hover td, body .table-show-infoStudent
   background-color: #ddd;
 }
 html .menu-content-ctStudent, body .menu-content-ctStudent {
-  border: 1px solid red;
   height: 80%;
   width: 6%;
   position: absolute;
@@ -489,6 +507,42 @@ html .btn-save-footer, body .btn-save-footer {
     font-weight: bold;
   }
 }
+html .body-content-ctDoctor, body .body-content-ctDoctor {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+html .nav-content-ctDoctor, body .nav-content-ctDoctor {
+  border: 2px solid orange;
+  height: 5%;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  font-size: 16px;
+  font-weight: bold;
+}
+html .nav-box-search, body .nav-box-search {
+  width: 25%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+  margin: 0 10%;
+}
+html .input-navDoctor-search, body .input-navDoctor-search {
+  width: 80%;
+  height: 60%;
+}
+@media only screen and (max-width: 720px) {
+  html .nav-content-ctDoctor, body .nav-content-ctDoctor {
+    height: 10%;
+  }
+  html .nav-box-search, body .nav-box-search {
+    width: 50%;
+  }
+}
 html .modal-slideBar-body, body .modal-slideBar-body {
   display: none;
   position: fixed;
@@ -596,6 +650,14 @@ html .header-nav-modalBox, body .header-nav-modalBox {
 }
 html .header-col, body .header-col {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+html .header-col span, body .header-col span {
+  color: #fefefe;
+  font-size: 18px;
+  font-weight: bold;
 }
 html .btn-modalbox-close, body .btn-modalbox-close {
   width: auto;
@@ -610,14 +672,12 @@ html .btn-modalbox-close i, body .btn-modalbox-close i {
   color: #fefefe;
 }
 html .body-content-modalStudent, body .body-content-modalStudent {
-  border: 2px solid red;
   height: 100%;
   width: 100%;
   display: grid;
   grid-template-columns: 70% 30%;
 }
 html .form-modalContent, body .form-modalContent {
-  border: 3px solid green;
   width: 100%;
   height: 100%;
   font-size: 14px;
@@ -637,13 +697,18 @@ html .input-modalBox input, body .input-modalBox input {
   width: 90%;
   padding-left: 8px;
 }
-html .inputButtonUpdown, html .inputButtonDrop, body .inputButtonUpdown, body .inputButtonDrop {
+html .inputButtonUpdown, html .inputButtonDrop, html .inputButtonDropFull, body .inputButtonUpdown, body .inputButtonDrop, body .inputButtonDropFull {
   position: relative;
   width: 35%;
 }
 html .inputButtonDrop, body .inputButtonDrop {
   position: static;
   display: flex;
+}
+html .inputButtonDropFull, body .inputButtonDropFull {
+  width: 90%;
+  display: flex;
+  position: static;
 }
 html .Modalinput-year, body .Modalinput-year {
   width: 100%;
@@ -692,7 +757,17 @@ html .box-dropDown, body .box-dropDown {
   height: 0;
   display: none;
 }
-html .box-dropDown button, body .box-dropDown button {
+html .box-dropDown-full, body .box-dropDown-full {
+  position: absolute;
+  bottom: -200px;
+  right: 10%;
+  width: 60%;
+  height: 200px;
+  display: none;
+  scroll-snap-type: mandatory;
+  overflow: auto;
+}
+html .box-dropDown button, html .box-dropDown-full button, body .box-dropDown button, body .box-dropDown-full button {
   width: 100%;
   height: 25px;
   border: none;
@@ -701,32 +776,47 @@ html .box-dropDown button, body .box-dropDown button {
   background-color: #fefefe;
   text-align: start;
   font-size: 16px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
-html .box-dropDown button:hover, body .box-dropDown button:hover {
+html .box-dropDown button:hover, html .box-dropDown-full button:hover, body .box-dropDown button:hover, body .box-dropDown-full button:hover {
   background-color: #b0bec5;
   font-weight: bold;
 }
-html .form-picture, body .form-picture {
-  border: 2px solid yellow;
+html .text-btn-teacherName, body .text-btn-teacherName {
+  border: 1px solid red;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
-html .form-picture .preview-picture, body .form-picture .preview-picture {
-  border: 1px solid rebeccapurple;
+html .btn-modal-submit, body .btn-modal-submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 0;
+}
+html .btn-modal-submit button, body .btn-modal-submit button {
+  width: 25%;
+  height: 35px;
+}
+html .form-picture, body .form-picture {
+  padding-right: 10px;
+  padding-top: 5px;
 }
 html .img-perview, body .img-perview {
-  border: 3px solid black;
+  border: 1px solid black;
   width: 100%;
   height: 180px;
   object-fit: contain;
 }
 html .input-picture, body .input-picture {
-  border: 5px solid orange;
   align-items: center;
   width: 100%;
   height: 80px;
   padding: 10px 5px;
 }
 html .input-picture-file, body .input-picture-file {
-  border: 1px solid black;
   width: 100%;
 }
 html .btn-add-filePicture, body .btn-add-filePicture {
@@ -743,8 +833,15 @@ html .btn-add-filePicture, body .btn-add-filePicture {
     width: 100%;
     height: auto;
   }
+  html .input-modalBox span, html .input-modalBox input, body .input-modalBox span, body .input-modalBox input {
+    font-size: 11px;
+  }
   html .inputButtonUpdown, html .inputButtonDrop, body .inputButtonUpdown, body .inputButtonDrop {
     width: 60%;
+  }
+  html .box-dropDown-full, body .box-dropDown-full {
+    height: 100px;
+    bottom: -100px;
   }
 }
 
