--- a/src/App.scss
+++ b/src/App.scss
@@ -408,8 +408,15 @@ $colorBGnav:#e0e0e0;
             }
    }
    .table-show-infoStudent>tbody>tr:hover td{
-        background-color: #ddd;
+        background-color: #01579b;
+        color: #fefefe;
    }
+   .table-show-infoStudent>tbody>tr:nth-child(odd){
+        background-color: $colorBGnav;
+   }
+   
+   
+   
 
     .menu-content-ctStudent{
         height: 80%;
