--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,8 @@ $colorBTNhover:#546e7a;
 $colorBTNbghover: #37474f;
 $colorBGmenu : #607d8b;
 
+$colorBorderDrop:#9e9e9e;
+
 $colorBGnav:#e0e0e0;
 
 @mixin bodyContentDefault(){
@@ -385,35 +387,7 @@ $colorBGnav:#e0e0e0;
         overflow-x: auto;
         background-color: #cfd8dc;
     }
-.table-show-infoStudent{
-    border-collapse: collapse;
-    width: 1450px;
-    background-color: #fefefe;
-    text-align: center;
-    font-weight: bold;
-}
-   .table-show-infoStudent{
-        thead{
-            // border: 5px solid red;
-            text-align: center;
-        }
-            th{
-                border: 2px solid black;
-                background-color: #607d8b;
-                color: #fefefe;
-                text-align: center;
-            }      
-            td{
-                border:  2px solid black;
-            }
-   }
-   .table-show-infoStudent>tbody>tr:hover td{
-        background-color: #01579b;
-        color: #fefefe;
-   }
-   .table-show-infoStudent>tbody>tr:nth-child(odd){
-        background-color: $colorBGnav;
-   }
+
    
    
    
@@ -591,7 +565,7 @@ $colorBGnav:#e0e0e0;
         display: block;
         margin-right: auto;
         font-weight: bold;
-    }
+    } 
 .content-ctDoctor{
     border: 2px solid green;
     height: 95%;
@@ -600,6 +574,8 @@ $colorBGnav:#e0e0e0;
 }
     .content-table{
         border: 1px solid red;
+        scroll-snap-type: mandatory;
+        overflow: auto;
     }
     .content-menu{
         border: 1px solid rebeccapurple;
@@ -621,6 +597,92 @@ $colorBGnav:#e0e0e0;
             font-size: 16px;
             font-weight: bold;
         }
+//content modal
+.header-inboxModal{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    background-color: #ffb74d;
+}
+    .header-inboxModal span{
+        font-size: 16px;
+        font-weight: bold;
+        color: #fff3e0;
+    }  
+.body-content-inboxModal{
+    height: 350px;
+    width: 100%;
+    display: block;
+    padding: 0 20px;
+}
+.form-contentInboxModal{
+    display: block;
+    position: relative;
+}
+    .box-input-contentInboxModal{
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 5px auto;
+        border: 1px solid black;
+        position: relative;
+    }
+        .box-input-contentInboxModal span{
+            font-size: 14px;
+            font-weight: bold;
+            padding: 0px 15px;
+        }
+        .box-input-contentInboxModal input{
+            width: 80%;
+            height: 25px;
+            border: 1px solid $colorBorderDrop;
+        }
+    .contentboxInput-InboxModal{
+       width: 100%;
+       width: 50%;
+       position: relative;
+    }
+        .dropDown-ttl-contentInboxModal{
+            display: none;
+            border: 1px solid $colorBorderDrop;
+            width: 80%;
+            height: 150px;
+            scroll-snap-type: mandatory;
+            overflow: auto;
+            position: absolute;
+            top: 25px;
+            left: 0;
+            background-color: #ffffff;
+        }
+        .infoTtl-dropdown-contentInboxModal{
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            padding: 2px 0;
+            border-bottom: 5px solid #eeeeee;
+        }
+        .infoTtl-dropdown-contentInboxModal:hover{
+            background-color: $colorBGnav;
+        }
+    .radio-btn-InboxModal{
+        border: 1px solid $colorBorderDrop;
+        display: grid;
+        grid-template-columns: 10% 90%;
+        width: 80%;
+    }
+    .radio-btn-InboxModal input{
+        height: 16px;
+        border: 1px solid red;
+        padding: 0;
+        margin: 0;
+    }
+    .radio-btn-InboxModal span{
+        padding: 0;
+    }
 @media only screen and (max-width:720px) {
     .nav-content-ctDoctor{
         height: 10%;
@@ -654,6 +716,13 @@ $colorBGnav:#e0e0e0;
     .content-menu-btn{
         height: 10%;
     }
+//modal
+.body-content-inboxModal{
+    height: 250px;
+}
+.dropDown-ttl-contentInboxModal{
+    height: 100px;
+}
 }
 @media only screen and (max-width:360px){
     .nav-content-ctDoctor{
@@ -960,6 +1029,41 @@ $colorBGnav:#e0e0e0;
     }
 }
 }
+@mixin TableInfo(){
+    .table-show-info{
+        border-collapse: collapse;
+        width: 1450px;
+        background-color: #fefefe;
+        text-align: center;
+        font-weight: bold;
+        position: relative;
+    }
+       .table-show-info{
+            thead{
+                // border: 5px solid red;
+                text-align: center;
+                position: sticky;
+                position: -webkit-sticky;
+                top: 0;
+            }
+                th{
+                    border: 2px solid black;
+                    background-color: #607d8b;
+                    color: #fefefe;
+                    text-align: center;
+                }      
+                td{
+                    border:  2px solid black;
+                }
+       }
+       .table-show-info>tbody>tr:hover td{
+            background-color: #01579b;
+            color: #fefefe;
+       }
+       .table-show-info>tbody>tr:nth-child(odd){
+            background-color: $colorBGnav;
+       }
+}
 
 html,body{
     @include LoginPage();
@@ -970,4 +1074,7 @@ html,body{
     // modal
     @include ModalSlideBar();
     @include ModalBox();
+
+    // table
+    @include TableInfo();
 }
