--- a/src/css/App.css
+++ b/src/css/App.css
@@ -580,7 +580,6 @@ html .body-content-inboxModal, body .body-content-inboxModal {
 }
 html .form-contentInboxModal, body .form-contentInboxModal {
   display: block;
-  position: relative;
 }
 html .box-input-contentInboxModal, body .box-input-contentInboxModal {
   width: 100%;
@@ -589,13 +588,12 @@ html .box-input-contentInboxModal, body .box-input-contentInboxModal {
   justify-content: center;
   align-items: center;
   margin: 5px auto;
-  border: 1px solid black;
-  position: relative;
 }
 html .box-input-contentInboxModal span, body .box-input-contentInboxModal span {
   font-size: 14px;
   font-weight: bold;
   padding: 0px 15px;
+  width: 120px;
 }
 html .box-input-contentInboxModal input, body .box-input-contentInboxModal input {
   width: 80%;
@@ -605,6 +603,9 @@ html .box-input-contentInboxModal input, body .box-input-contentInboxModal input
 html .contentboxInput-InboxModal, body .contentboxInput-InboxModal {
   width: 100%;
   width: 50%;
+  position: static;
+}
+html .relativeBox-drop, body .relativeBox-drop {
   position: relative;
 }
 html .dropDown-ttl-contentInboxModal, body .dropDown-ttl-contentInboxModal {
@@ -631,18 +632,30 @@ html .infoTtl-dropdown-contentInboxModal:hover, body .infoTtl-dropdown-contentIn
 }
 html .radio-btn-InboxModal, body .radio-btn-InboxModal {
   border: 1px solid #9e9e9e;
-  display: grid;
-  grid-template-columns: 10% 90%;
+  display: flex;
+  align-items: center;
   width: 80%;
 }
 html .radio-btn-InboxModal input, body .radio-btn-InboxModal input {
+  width: 30px;
   height: 16px;
-  border: 1px solid red;
-  padding: 0;
-  margin: 0;
+  margin: 5px 0;
 }
 html .radio-btn-InboxModal span, body .radio-btn-InboxModal span {
   padding: 0;
+  width: auto;
+}
+html .relativeBox-PIN, body .relativeBox-PIN {
+  display: flex;
+}
+html .btn-eyes-showtext-hide, html .btn-eyes-showtext-show, body .btn-eyes-showtext-hide, body .btn-eyes-showtext-show {
+  border: 1px solid #9e9e9e;
+}
+html .btn-eyes-showtext-hide:hover, html .btn-eyes-showtext-show:hover, body .btn-eyes-showtext-hide:hover, body .btn-eyes-showtext-show:hover {
+  background-color: #e0e0e0;
+}
+html .btn-eyes-showtext-show, body .btn-eyes-showtext-show {
+  display: none;
 }
 @media only screen and (max-width: 720px) {
   html .nav-content-ctDoctor, body .nav-content-ctDoctor {
