--- a/src/css/App.css
+++ b/src/css/App.css
@@ -730,17 +730,15 @@ html .body-content-groupStudent, body .body-content-groupStudent {
   width: 100%;
   padding: 0;
   margin: 0;
-  border: 1px solid red;
+  border: 2px solid black;
 }
 html .hander-content-groupStudent, body .hander-content-groupStudent {
-  border: 2px solid green;
   height: 5%;
   display: grid;
   grid-template-columns: 20% 30% 40% 10%;
   background-color: #e0e0e0;
 }
 html .col-header, body .col-header {
-  border: 1px solid blue;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -774,26 +772,114 @@ html .btn-close-groupStudent, body .btn-close-groupStudent {
   width: 80%;
 }
 html .content-groupStudent, body .content-groupStudent {
-  border: 1px solid red;
   height: 95%;
   width: 100%;
   display: grid;
-  grid-template-columns: 50% 40% 10%;
+  grid-template-columns: 40% 50% 10%;
+  background-color: #fefefe;
 }
 html .table-box-groupStudent, body .table-box-groupStudent {
-  border: 1px solid green;
-  height: 100%;
-  width: 100%;
+  height: 95%;
+  width: 95%;
+  display: block;
+  margin: auto;
+  scroll-snap-type: mandatory;
+  overflow: auto;
+  border-right: 3px solid #9e9e9e;
 }
 html .box-controll-student, body .box-controll-student {
-  border: 1px solid rebeccapurple;
+  height: 95%;
+  width: 95%;
+  display: block;
+  margin: auto;
+  border-right: 3px solid #9e9e9e;
+}
+html .row-table-controll-student, body .row-table-controll-student {
+  scroll-snap-type: mandatory;
+  overflow: auto;
+  height: 30%;
+}
+html .btnAddDel-controll-student, body .btnAddDel-controll-student {
+  display: flex;
+  height: 5%;
+  justify-content: end;
+  padding: 0 15px;
+  margin: 2%;
+}
+html .btnAdd-inControllStudent, html .btnDel-incontrollStudent, body .btnAdd-inControllStudent, body .btnDel-incontrollStudent {
+  width: 40%;
   height: 100%;
-  width: 100%;
+  margin: 0 1%;
+}
+html .box-doctorInput-ControllStudent, body .box-doctorInput-ControllStudent {
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: 80% 20%;
+  border: 1px solid red;
+}
+html .box-doctorInput-ControllStudent span, body .box-doctorInput-ControllStudent span {
+  margin-right: 3px;
+}
+html .input-doctorText, body .input-doctorText {
+  width: 50%;
+}
+html .row-input-doctorInputControllStudent, body .row-input-doctorInputControllStudent {
+  margin-bottom: 10px;
+  display: flex;
+}
+html .input-meq-ControllStudent, body .input-meq-ControllStudent {
+  width: 35%;
+}
+html .btn-submit-groupStudent, body .btn-submit-groupStudent {
+  width: 95%;
+  height: 75%;
+  display: block;
+  margin: 5px auto;
 }
 html .box-menu-groupStudent, body .box-menu-groupStudent {
-  border: 1px solid salmon;
-  height: 100%;
+  border: 2px solid #9e9e9e;
+  height: 95%;
+  width: 95%;
+  display: block;
+  margin: auto;
+  scroll-snap-type: mandatory;
+  overflow: auto;
+  background-color: #e0e0e0;
+}
+html .btn-menu-boxGroupStudent, body .btn-menu-boxGroupStudent {
+  margin: 5px 0;
   width: 100%;
+  height: 5%;
+}
+html .btn-menu-boxGroupStudent button, body .btn-menu-boxGroupStudent button {
+  width: 90%;
+  height: 100%;
+  display: block;
+  margin: auto;
+}
+html .box-btnmodal-adding, body .box-btnmodal-adding {
+  width: 100%;
+  height: 10%;
+  margin: 2px;
+  display: block;
+  position: relative;
+}
+html .btn-addingModal, body .btn-addingModal {
+  width: 90%;
+  height: 25px;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+@media only screen and (max-width: 1024px) {
+  html .row-input-doctorInputControllStudent, body .row-input-doctorInputControllStudent {
+    display: block;
+  }
+  html .boxInRowInputControllStudent, body .boxInRowInputControllStudent {
+    padding: 5px;
+  }
 }
 @media only screen and (max-width: 740px) {
   html .hander-content-groupStudent, body .hander-content-groupStudent {
@@ -806,6 +892,19 @@ html .box-menu-groupStudent, body .box-menu-groupStudent {
   html .box-col-year, body .box-col-year {
     justify-content: start;
     padding-left: 5px;
+  }
+  html .content-groupStudent, body .content-groupStudent {
+    height: 90%;
+  }
+  html .btnAddDel-controll-student, body .btnAddDel-controll-student {
+    height: 7%;
+  }
+  html .btnAdd-inControllStudent, html .btnDel-incontrollStudent, body .btnAdd-inControllStudent, body .btnDel-incontrollStudent {
+    width: 50%;
+    font-size: 11px;
+  }
+  html .box-doctorInput-ControllStudent, body .box-doctorInput-ControllStudent {
+    display: none;
   }
 }
 html .modal-slideBar-body, body .modal-slideBar-body {
@@ -1116,6 +1215,7 @@ html .table-show-info, body .table-show-info {
   text-align: center;
   font-weight: bold;
   position: relative;
+  margin: auto;
 }
 html .table-show-info thead, body .table-show-info thead {
   text-align: center;
